# tuities

./: README.md  pyproject.toml
src/tuities/: main.py  tuities.py
tests/: test_main.py
