[project]
name = "tuities"
version = "0.1.0"
description = "A simple TUI app for stock market tracking."
authors = [
    {name = "Milosz Sultanowski",email = "milosz.sultanowski@gmail.com"}
]
license = {text = "GPL 3.0"}
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "yfinance (>=0.2.57,<0.3.0)",
    "plotext (>=5.3.2,<6.0.0)",
    "textual (>=3.2.0,<4.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "tuities", from = "src" }
]